@@ -43,9 +43,15 @@
     </defaults>
     <branch id="HEAD"/>
   </module>
-  <module id="atk">
-    <branch id="HEAD" stringfrozen="true"/>
+  <module id="at-spi">
+    <branch id="HEAD"/>
     <branch id="gnome-2-14" stringfrozen="true"/>
+    <branch id="gnome-2-18" stringfrozen="true"/>
+  </module>
+  <module id="atk">
+    <branch id="HEAD"/>
+    <branch id="gnome-2-14" stringfrozen="true"/>
+    <branch id="gnome-2-18" stringfrozen="true"/>
   </module>
   <module id="atomato">
     <branch id="HEAD"/>
@@ -291,14 +297,16 @@
   </module>
   <module id="gail">
     <branch id="HEAD"/>
+    <branch id="gnome-2-18" stringfrozen="true"/>
   </module>
   <module id="galeon">
     <branch id="HEAD"/>
   </module>
   <module id="gcalctool">
-    <branch id="HEAD" stringfrozen="true"/>
+    <branch id="HEAD"/>
     <branch id="gnome-2-14" stringfrozen="true"/>
     <branch id="gnome-2-16" stringfrozen="true"/>
+    <branch id="gnome-2-18" stringfrozen="true"/>
   </module>
   <module id="gcompris">
     <branch id="HEAD"/>
@@ -600,6 +608,7 @@
     <branch id="HEAD"/>
     <branch id="gnome-2-14" stringfrozen="true"/>
     <branch id="gnome-2-16" stringfrozen="true"/>
+    <branch id="gnome-2-18" stringfrozen="true"/>
   </module>
   <module id="gnomeicu">
     <branch id="HEAD"/>
