@@ -1,3 +1,9 @@
+2007-03-12  Claude Paroz  <claude@2xlibre.net>
+
+	* gnome-modules.xml.in:
+	* releases.xml.in: Modules branched for 2.18 (gail, atk, at-spi,
+	gcalctool, gnome-icon-theme)
+
 2007-03-12  David Lodge <dave@cirt.net>
 
 	* releases.xml.in: Removed gnome-app-install, gnome-glossary, optimystic
